@@ -7,7 +7,6 @@ use warnings;
 use IO::Socket;
 
 sub CommandUpdatefhem($$);
-sub CommandCULflash($$);
 sub GetHttpFile($$@);
 sub ParseChanges($);
 sub ReadOldFiletimes($);
@@ -17,8 +16,6 @@ sub FileList($);
 my $server = "fhem.de:80";
 my $sdir   = "/fhemupdate2";
 my $ftime  = "filetimes.txt";
-my $dfu    = "dfu-programmer";
-
 
 #####################################
 sub
@@ -28,9 +25,6 @@ updatefhem_Initialize($$)
                 Hlp=>",update fhem from the nightly SVN" );
   $cmds{updatefhem} = \%fhash;
 
-  my %chash = ( Fn=>"CommandCULflash",
-                Hlp=>"<cul> <type>,flash the CUL from the nightly SVN" );
-  $cmds{CULflash} = \%chash;
 }
 
 #####################################
@@ -314,63 +308,6 @@ CommandUpdatefhem($$)
     Log 1, "updatefhem New version of fhem.pl, 'shutdown restart' is required!";
   }
   return $ret;
-}
-
-sub
-CommandCULflash($$)
-{
-  my ($cl, $param) = @_;
-  my $modpath = (-d "update" ? "update" : $attr{global}{modpath});
-  my $moddir = "$modpath/FHEM";
-
-  my %ctypes = (
-    CUL_V2     => "at90usb162",
-    CUL_V2_HM  => "at90usb162",
-    CUL_V3     => "atmega32u4",
-    CUL_V4     => "atmega32u2",
-  );
-  my @a = split("[ \t]+", $param);
-  return "Usage: CULflash <Fhem-CUL-Device> <CUL-type>, ".
-                "where <CUL-type> is one of ". join(" ", sort keys %ctypes)
-      if(!(int(@a) == 2 &&
-          ($a[0] eq "none" || ($defs{$a[0]} && $defs{$a[0]}{TYPE} eq "CUL")) &&
-          $ctypes{$a[1]}));
-
-  my $cul  = $a[0];
-  my $target = $a[1];
-
-  ################################
-  # First get the index file to prove the file size
-  my $filetimes = GetHttpFile($server, "$sdir/$ftime");
-  return "Can't get $ftime from $server" if(!$filetimes);
-
-  # split filetime and filesize
-  my ($ret, $filetime, $filesize) = SplitNewFiletimes($filetimes);
-  return $ret if($ret);
-
-  ################################
-  # Now get the firmware file:
-  my $content = GetHttpFile($server, "$sdir/FHEM/$target.hex");
-  return "File size for $target.hex does not correspond to filetimes.txt entry"
-          if(length($content) ne $filesize->{"FHEM/$target.hex"});
-  my $localfile = "$moddir/$target.hex";
-  open(FH,">$localfile") || return "Can't write $localfile";
-  print FH $content;
-  close(FH);
-
-  my $cmd = "($dfu MCU erase && $dfu MCU flash TARGET && $dfu MCU start) 2>&1";
-  my $mcu = $ctypes{$target};
-  $cmd =~ s/MCU/$mcu/g;
-  $cmd =~ s/TARGET/$localfile/g;
-
-  if($cul ne "none") {
-    CUL_SimpleWrite($defs{$cul}, "B01");
-    sleep(4);     # B01 needs 2 seconds for the reset
-  }
-  Log 1, "updatefhem $cmd";
-  my $result = `$cmd`;
-  Log 1, "updatefhem $result";
-  return $result;
 }
 
 sub
